--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jeopardy</title>
-</head>
-<body>
-  <h1>Welcome to Jeopardy!</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jeopardy</title>
+  </head>
+  <body>
+    <h1>Welcome to Jeopardy!</h1>
+    <div class="image">
+      <img
+        src="https://images.squarespace-cdn.com/content/v1/5bc58608348cd9430c0c030d/1545076196058-LSVN5HEDO5IQL0Q0IBXA/_Jeopardy+Logo_LOOP_16x9+%280%3B00%3B05%3B00%29.png?format=1000w"
+      />
+    </div>
+  </body>
 </html>
