--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jeopardy</title>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <h1>Welcome to Jeopardy!</h1>
-    <div class="image">
-      <img
-        src="https://images.squarespace-cdn.com/content/v1/5bc58608348cd9430c0c030d/1545076196058-LSVN5HEDO5IQL0Q0IBXA/_Jeopardy+Logo_LOOP_16x9+%280%3B00%3B05%3B00%29.png?format=1000w"
-      />
+    <div class="pageOne">
+      <h1>Welcome To</h1>
+      <p>*Cohort-8 Edition*</p>
     </div>
+    <div class="image">
+      <!-- <img
+        src="https://images.squarespace-cdn.com/content/v1/5bc58608348cd9430c0c030d/1545076196058-LSVN5HEDO5IQL0Q0IBXA/_Jeopardy+Logo_LOOP_16x9+%280%3B00%3B05%3B00%29.png?format=1000w"
+      /> -->
+    </div>
+    <a href="round-1.html"
+      ><div id="button"><button type="button">START ></button></div></a
+    >
   </body>
 </html>
