Another project update

--- a/round-2.html
+++ b/round-2.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jeopardy</title>
-</head>
-<body>
-  <h1>Double Jeopardy</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jeopardy</title>
+    <link rel="stylesheet" href="css/roundTwo.css" />
+  </head>
+  <body>
+    <h1>Double Jeopardy!</h1>
+    <div class="border">
+      <div class="container">
+        <div class="one">Cat 1</div>
+        <div class="two">Cat 2</div>
+        <div class="three">Cat 3</div>
+        <div class="four">Cat 4</div>
+        <div class="five">Cat 5</div>
+        <div class="six">Cat 6</div>
+        <div class="twoHun">200</div>
+        <div class="twoHun">200</div>
+        <div class="twoHun">200</div>
+        <div class="twoHun">200</div>
+        <div class="twoHun">200</div>
+        <div class="twoHun">200</div>
+        <div class="fourHun">400</div>
+        <div class="fourHun">400</div>
+        <div class="fourHun">400</div>
+        <div class="fourHun">400</div>
+        <div class="fourHun">400</div>
+        <div class="fourHun">400</div>
+        <div class="sixHun">600</div>
+        <div class="sixHun">600</div>
+        <div class="sixHun">600</div>
+        <div class="sixHun">600</div>
+        <div class="sixHun">600</div>
+        <div class="sixHun">600</div>
+        <div class="eightHun">800</div>
+        <div class="eightHun">800</div>
+        <div class="eightHun">800</div>
+        <div class="eightHun">800</div>
+        <div class="eightHun">800</div>
+        <div class="eightHun">800</div>
+        <div class="thousand">1000</div>
+        <div class="thousand">1000</div>
+        <div class="thousand">1000</div>
+        <div class="thousand">1000</div>
+        <div class="thousand">1000</div>
+        <div class="thousand">1000</div>
+        <div class="twelveHun">1200</div>
+        <div class="twelveHun">1200</div>
+        <div class="twelveHun">1200</div>
+        <div class="twelveHun">1200</div>
+        <div class="twelveHun">1200</div>
+        <div class="twelveHun">1200</div>
+      </div>
+    </div>
+  </body>
 </html>
