--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
       <h1>Welcome To</h1>
       <p>*Cohort-8 Edition*</p>
     </div>
-    <div class="image">
-      <!-- <img
-        src="https://images.squarespace-cdn.com/content/v1/5bc58608348cd9430c0c030d/1545076196058-LSVN5HEDO5IQL0Q0IBXA/_Jeopardy+Logo_LOOP_16x9+%280%3B00%3B05%3B00%29.png?format=1000w"
-      /> -->
-    </div>
+    <div class="image"></div>
     <a href="round-1.html"
       ><div id="button"><button type="button">START ></button></div></a
     >
