--- a/round-2.html
+++ b/round-2.html
@@ -55,5 +55,24 @@
         <div class="twelveHun">1200</div>
       </div>
     </div>
+    <nav>
+      <a href="final-jeopardy.html"
+        ><div id="button">
+          <button type="button">Final Jeopardy ></button>
+        </div></a
+      >
+    </nav>
+    <form>
+      <label for="guess"></label>
+      <input type="text" id="fname" name="fname" />
+    </form>
+    <div id="gameButt">
+      <button>Guess</button>
+      <button>Pass</button>
+    </div>
+    <div class="score">
+      <p>Player 1: 0</p>
+      <p>Player 2: 0</p>
+    </div>
   </body>
 </html>
