--- a/final-jeopardy.html
+++ b/final-jeopardy.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Final Jeopardy</title>
-</head>
-<body>
-  <h1>Final Jeopardy</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Final Jeopardy!</title>
+    <link rel="stylesheet" href="css/final.css" />
+  </head>
+  <body>
+    <h1>Final Jeopardy!</h1>
+    <p>Category</p>
+    <button>Bet!</button>
+  </body>
 </html>
