--- a/round-1.html
+++ b/round-1.html
@@ -61,5 +61,17 @@
         <button type="button">Double Jeopardy -></button>
       </div></a
     >
+    <form>
+      <label for="guess"></label>
+      <input type="text" id="fname" name="fname" />
+    </form>
+    <div id="gameButt">
+      <button>Guess</button>
+      <button>Pass</button>
+    </div>
+    <div class="score">
+      <p>Player 1: 0</p>
+      <p>Player 2: 0</p>
+    </div>
   </body>
 </html>
