semi-final board

--- a/final-jeopardy.html
+++ b/final-jeopardy.html
@@ -10,6 +10,12 @@
   <body>
     <h1>Final Jeopardy!</h1>
     <p>Category</p>
-    <button>Bet!</button>
+    <h3>Final Jeop Question</h3>
+    <form>
+      <label for="guess"></label>
+      <input type="text" placeholder="wager" id="name" name="name" />
+      <input type="text" placeholder="answer" id="name" name="name" />
+      <button>Bet!</button>
+    </form>
   </body>
 </html>
