--- a/round-1.html
+++ b/round-1.html
@@ -63,7 +63,7 @@
     >
     <form>
       <label for="guess"></label>
-      <input type="text" id="fname" name="fname" />
+      <input type="text" id="guess" name="guess" />
     </form>
     <div id="gameButt">
       <button>Guess</button>
