most up to date project

--- a/round-2.html
+++ b/round-2.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>Double Jeopardy!</h1>
+    <h2 id="timer"></h2>
     <div class="border">
       <div class="container">
         <div class="one">Cat 1</div>
@@ -64,7 +65,7 @@
     </nav>
     <form>
       <label for="guess"></label>
-      <input type="text" id="fname" name="fname" />
+      <input type="text" id="answer" name="answer" />
     </form>
     <div id="gameButt">
       <button>Guess</button>
@@ -74,5 +75,6 @@
       <p>Player 1: 0</p>
       <p>Player 2: 0</p>
     </div>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
