--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
     <div class="pageOne">
       <h1>Welcome To</h1>
       <p>*Cohort-8 Edition*</p>
+      <img
+        class="jeop-img"
+        src="https://images.squarespace-cdn.com/content/v1/5bc58608348cd9430c0c030d/1545076196058-LSVN5HEDO5IQL0Q0IBXA/_Jeopardy+Logo_LOOP_16x9+%280%3B00%3B05%3B00%29.png?format=1000w"
+      />
     </div>
     <div class="image"></div>
     <a href="round-1.html"
-      ><div id="button"><button type="button">START ></button></div></a
+      ><div class="button"><button type="button">START ></button></div></a
     >
   </body>
 </html>
