--- a/round-1.html
+++ b/round-1.html
@@ -63,13 +63,9 @@
     >
     <form>
       <label for="guess"></label>
-<<<<<<< HEAD
-      <input type="text" id="answer" name="answer" />
-=======
       <input type="text" id="guess" name="guess" />
->>>>>>> 5f6521aea879b64db0230b7fba9dd7f6e51e7821
     </form>
-    <div id="gameButt">
+    <div class="gameButt">
       <button>Guess</button>
       <button>Pass</button>
     </div>
