--- a/round-1.html
+++ b/round-1.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jeopardy</title>
+    <!-- links to css for styling -->
     <link rel="stylesheet" href="css/roundOne.css" />
   </head>
   <body>
+    <!-- header for round one board -->
     <h1>Are You Ready?</h1>
     <h2>Jeopardy Round One:</h2>
     <div class="border">
       <div class="container">
+        <!-- divs containing all squares for board -->
         <div class="one">Cat 1</div>
         <div class="two">Cat 2</div>
         <div class="three">Cat 3</div>
@@ -56,19 +59,23 @@
         <div class="sixHun">600</div>
       </div>
     </div>
+    <!-- button that leads to double Jeopardy board -->
     <a href="round-2.html"
       ><div id="button">
         <button type="button">Double Jeopardy -></button>
       </div></a
     >
+    <!-- form for guess and pass button inputs -->
     <form>
       <label for="guess"></label>
       <input type="text" id="guess" name="guess" />
     </form>
     <div class="gameButt">
+      <!-- guess and pass button -->
       <button>Guess</button>
       <button>Pass</button>
     </div>
+    <!-- player score section -->
     <div class="score">
       <p>Player 1: 0</p>
       <p>Player 2: 0</p>
