--- a/final-jeopardy.html
+++ b/final-jeopardy.html
@@ -5,16 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Final Jeopardy!</title>
+    <!-- importing css for styling -->
     <link rel="stylesheet" href="css/final.css" />
   </head>
   <body>
+    <!-- final jeop header -->
     <h1>Final Jeopardy!</h1>
     <p>Category</p>
     <h3>Final Jeop Question</h3>
+    <!-- form for final jeop input -->
     <form>
       <label for="guess"></label>
       <input type="text" placeholder="wager" id="name" name="name" />
       <input type="text" placeholder="answer" id="name" name="name" />
+      <!-- button to place bet -->
       <button>Bet!</button>
     </form>
   </body>
